syntax = "proto3";

package fullbottle.srv.bottle;

service BottleService {
    rpc GetBottleMetadata(GetBottleMetadataRequest) returns (GetBottleMetadataResponse) {}
    rpc InitBottle(InitBottleRequest) returns (InitBottleResponse) {}
    rpc UpdateBottle(UpdateBottleRequest) returns (UpdateBottleResponse) {}

    rpc GetFolderInfo(GetFolderInfoRequest) returns (GetFolderInfoResponse) {}
    rpc CreateFolder(CreateFolderRequest) returns (CreateFolderResponse) {}
    rpc UpdateFolder(UpdateFolderRequest) returns (UpdateFolderResponse) {}
    rpc RemoveFolder(RemoveFolderRequest) returns (RemoveFolderResponse) {}

    rpc GetFileInfo(GetFileInfoRequest) returns (GetFileInfoResponse) {}
    rpc UpdateFile(UpdateFileRequest) returns (UpdateFileResponse) {}
    rpc RemoveFile(RemoveFileRequest) returns (RemoveFileResponse) {}
}

message FileInfo {
    int64 id = 1;
    int64 file_id = 2;
    string name = 3;
    int64 size = 4;
    string hash = 5;
    int64 folder_id = 6;
    int64 owner_id = 7;
    int64 create_time = 8;
    int64 update_time = 9;
}

message FolderInfo {
    int64 folder_id = 1;
    string name = 2;
    int64 parent_id = 3;

    int64 create_time = 4;
    int64 update_time = 5;

    repeated FolderInfo folders = 6;
    repeated FileInfo files = 7;
}

message GetBottleMetadataRequest {
    int64 uid = 1;
}

message GetBottleMetadataResponse {
    int64 bid = 1;
    int64 capacity = 2;
    int64 remain = 3;
}

message InitBottleRequest {
    int64 uid = 1;
    int64 capacity = 2;
}

message InitBottleResponse {

}

message UpdateBottleRequest {
    int64 bid = 1;
    int64 capacity = 2;
}

message UpdateBottleResponse {

}

message GetFolderInfoRequest {
    oneof ident {
        int64 folder_id = 1;
        string path = 2;
    }
    int64 owner_id = 3;
}

message GetFolderInfoResponse {
    FolderInfo folder = 1;
}

message CreateFolderRequest {
    string name = 1;
    int64 parent_id = 2;
    int64 owner_id = 3;
}

message CreateFolderResponse {
    int64 folder_id = 1;
}

message UpdateFolderRequest {
    int64 folder_id = 1;
    string name = 2;
    int64 parent_id = 3;
    int64 owner_id = 4;
}

message UpdateFolderResponse {

}

message RemoveFolderRequest {
    int64 folder_id = 1;
    int64 owner_id = 2;
}

message RemoveFolderResponse {

}

message GetFileInfoRequest {
    int64 file_id = 1;
    int64 owner_id = 2;
}

message GetFileInfoResponse {
    FileInfo file = 1;
}

message UpdateFileRequest {
    int64 file_id = 1;
    int64 owner_id = 2;

    // form
    string name = 3;
    int64 folder_id = 4;
}

message UpdateFileResponse {

}

message RemoveFileRequest {
    int64 file_id = 1;
    int64 owner_id = 2;
}

message RemoveFileResponse {

}
